--- a/index.html
+++ b/index.html
@@ -1,142 +1,232 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="hi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji Guess Game</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Emoji Guess Game</title>
+  <style>
+    :root{
+      --bg1:#0f1724; --bg2:#071028;
+      --glass: rgba(255,255,255,0.04);
+      --muted:#9aa7b2;
+    }
+    html,body{
+      height:100%; margin:0;
+      font-family:Inter,system-ui,Segoe UI,Roboto,'Noto Sans',sans-serif;
+      background: linear-gradient(180deg,var(--bg1),var(--bg2));
+      color:#e6f0f1;
+    }
+    .wrap{
+      min-height:100vh; display:flex;
+      align-items:center; justify-content:center;
+      padding:20px; flex-direction:column;
+    }
+    header{
+      display:flex; gap:12px; align-items:center;
+      margin-bottom:16px; text-align:left; width:100%;
+      max-width:450px;
+    }
+    .logo{
+      width:56px;height:56px;border-radius:12px;
+      background:linear-gradient(135deg,#8ef3a0,#4ad5ff);
+      display:flex;align-items:center;justify-content:center;
+      color:#012; font-weight:700;
+      animation:tilt 4s infinite linear;
+    }
+    @keyframes tilt{
+      0%{transform:rotate(-6deg)}
+      50%{transform:rotate(6deg)}
+      100%{transform:rotate(-6deg)}
+    }
 
-    <style>
-        body {
-            font-family: Arial;
-            background: #1a1a1a;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
+    .card{
+      width:100%; max-width:450px;
+      background:rgba(255,255,255,0.03);
+      border-radius:14px; padding:18px;
+      box-shadow:0 10px 30px rgba(0,0,0,0.6);
+    }
 
-        #game-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 12px;
-            max-width: 450px;
-            margin: 20px auto;
-        }
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(4,1fr);
+      gap:12px; width:100%;
+    }
 
-        .tile {
-            background: #2a2a2a;
-            padding: 25px;
-            border-radius: 12px;
-            font-size: 30px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
+    .tile{
+      background:var(--glass);
+      border-radius:10px;
+      min-height:90px;
+      display:flex; flex-direction:column;
+      align-items:center; justify-content:center;
+      cursor:pointer; position:relative;
+      transition:0.25s ease;
+      overflow:hidden;
+    }
 
-        .tile.open {
-            background: #444;
-            transform: scale(1.05);
-        }
+    .tile:hover{transform:scale(1.03);}
+    .emoji{font-size:36px; margin-bottom:8px;}
+    .tag{font-size:13px; font-weight:700; padding:5px 10px; border-radius:20px;}
 
-        .btn {
-            background: #00bfff;
-            padding: 10px 15px;
-            margin: 5px;
-            border: none;
-            border-radius: 8px;
-            color: black;
-            cursor: pointer;
-            font-weight: bold;
-        }
+    .haa{background:#caffd8; color:#01340c;}
+    .nahi{background:#ffd7d7; color:#3c0202;}
 
-        .hidden { display: none; }
-    </style>
+    .revealed{pointer-events:none;}
+
+    /* modal */
+    .modal{
+      position:fixed; inset:0; display:flex;
+      align-items:center; justify-content:center;
+      background:rgba(0,0,0,0.6); z-index:60;
+    }
+    .dialog{
+      background:#071428; padding:20px;
+      border-radius:12px; width:92%; max-width:420px;
+    }
+    .dialog input{
+      width:100%; padding:12px; border-radius:8px;
+      background:transparent; color:#fff;
+      border:1px solid rgba(255,255,255,0.06);
+    }
+    .btn{
+      padding:10px 14px; background:linear-gradient(90deg,#56e39f,#2dc1ff);
+      border:0; margin-top:12px; border-radius:12px;
+      font-weight:700; cursor:pointer;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="wrap">
 
-<h2 id="greeting"></h2>
+    <header>
+      <div class="logo">EG</div>
+      <div>
+        <h2 style="margin:0;">Emoji Guess Game</h2>
+        <div id="greet" style="font-size:14px;color:#9aa7b2;">Loading...</div>
+      </div>
+    </header>
 
-<div id="admin-controls" class="hidden">
-    <button class="btn" onclick="resetTiles()">Reset Tiles</button>
-    <button class="btn" onclick="changeName()">Change Name</button>
-    <a href="users.html" class="btn">View All Users</a>
-</div>
+    <div class="card">
+      <div style="margin-bottom:12px;color:#9aa7b2;">
+        Hello — <strong id="playerName"></strong>  
+        <div style="font-size:13px;margin-top:4px;">
+          Click any tile. 10% chance 😊, otherwise 😢.
+        </div>
+      </div>
 
-<div id="game-container"></div>
+      <div class="grid" id="grid"></div>
+    </div>
+  </div>
+
+  <!-- modal -->
+  <div class="modal" id="nameModal" style="display:none">
+    <div class="dialog">
+      <h2>Naam batao 😊</h2>
+      <input id="nameInput" placeholder="Aapka naam..." />
+      <button class="btn" id="saveNameBtn">Save</button>
+    </div>
+  </div>
+
+  <template id="tileTpl">
+    <div class="tile">
+      <div class="emoji">❔</div>
+      <div class="tag" style="opacity:0;">?</div>
+    </div>
+  </template>
 
 <script>
-    let currentUser = localStorage.getItem("current_user");
+  const TOTAL = 20;
+  const SMILE_PROB = 0.10;
 
-    if (!currentUser) {
-        currentUser = prompt("Enter your name:");
-        localStorage.setItem("current_user", currentUser);
+  const nameModal = document.getElementById('nameModal');
+  const nameInput = document.getElementById('nameInput');
+  const saveNameBtn = document.getElementById('saveNameBtn');
+  const playerNameEl = document.getElementById('playerName');
+  const greetEl = document.getElementById('greet');
+  const grid = document.getElementById('grid');
+  const template = document.getElementById('tileTpl');
+
+  const lsName = "eg_name";
+  const lsReveal = "eg_rev1";
+
+  function loadName(){ return localStorage.getItem(lsName) || ""; }
+  function saveName(n){ localStorage.setItem(lsName,n); }
+
+  function loadReveals(){
+    try{ return JSON.parse(localStorage.getItem(lsReveal) || "[]"); }
+    catch(e){ return []; }
+  }
+  function saveReveals(d){
+    localStorage.setItem(lsReveal, JSON.stringify(d));
+  }
+
+  let revealed = loadReveals();
+
+  function ensureName(){
+    let nm = loadName();
+    if(!nm){
+      nameModal.style.display = "flex";
+    } else {
+      start(nm);
     }
+  }
 
-    document.getElementById("greeting").innerText =
-        "Welcome, " + currentUser + "!";
+  saveNameBtn.onclick = ()=>{
+    const v = nameInput.value.trim();
+    if(!v) return;
+    saveName(v);
+    nameModal.style.display="none";
+    start(v);
+  };
 
-    // Admin check
-    if (currentUser === "Praveen") {
-        document.getElementById("admin-controls").classList.remove("hidden");
+  function start(name){
+    playerNameEl.innerText = name;
+    greetEl.innerText = "Namaste " + name + "! Khelo aur enjoy karo.";
+    renderGrid();
+  }
+
+  function renderGrid(){
+    grid.innerHTML = "";
+    for(let i=0;i<TOTAL;i++){
+      const node = template.content.cloneNode(true);
+      const tile = node.querySelector('.tile');
+      const emoji = tile.querySelector('.emoji');
+      const tag = tile.querySelector('.tag');
+
+      const old = revealed.find(x=>x.i===i);
+
+      if(old){
+        tile.classList.add("revealed");
+        emoji.textContent = old.r==="s" ? "😊" : "😢";
+        tag.textContent = old.r==="s" ? "haa" : "nahi";
+        tag.classList.add(old.r==="s" ? "haa" : "nahi");
+        tag.style.opacity = "1";
+      } else {
+        tile.onclick = ()=>{
+          const smile = Math.random() < SMILE_PROB;
+          const result = smile ? "s" : "d";
+
+          revealed.push({i,r:result});
+          saveReveals(revealed);
+
+          emoji.textContent = smile ? "😊" : "😢";
+          tag.textContent = smile ? "haa" : "nahi";
+          tag.classList.add(smile ? "haa" : "nahi");
+          tag.style.opacity = "1";
+          tile.classList.add("revealed");
+          tile.onclick=null;
+        };
+      }
+
+      grid.appendChild(node);
     }
+  }
 
-    // load user data or empty
-    let userKey = "tiles_" + currentUser;
-    let openedTiles = JSON.parse(localStorage.getItem(userKey)) || [];
-
-    // create grid
-    const container = document.getElementById("game-container");
-
-    function createTiles() {
-        container.innerHTML = "";
-
-        for (let i = 0; i < 20; i++) {
-            let div = document.createElement("div");
-            div.className = "tile";
-
-            if (openedTiles.includes(i)) {
-                div.classList.add("open");
-                div.innerHTML = getEmoji();
-            }
-
-            div.onclick = () => openTile(i, div);
-            container.appendChild(div);
-        }
-    }
-
-    function getEmoji() {
-        // 90% sad, 10% smile
-        return Math.random() < 0.1 ? "🙂 (Haa)" : "😢 (Nahi)";
-    }
-
-    function openTile(index, div) {
-        if (!openedTiles.includes(index)) {
-            openedTiles.push(index);
-            div.classList.add("open");
-            div.innerHTML = getEmoji();
-            saveUser();
-        }
-    }
-
-    function saveUser() {
-        localStorage.setItem(userKey, JSON.stringify(openedTiles));
-    }
-
-    function resetTiles() {
-        openedTiles = [];
-        saveUser();
-        createTiles();
-    }
-
-    function changeName() {
-        let newName = prompt("Enter new name:");
-        if (!newName) return;
-
-        localStorage.setItem("current_user", newName);
-        location.reload();
-    }
-
-    createTiles();
+  document.addEventListener("DOMContentLoaded", ()=>{
+    let nm = loadName();
+    if(nm) nameInput.value = nm;
+    ensureName();
+  });
 </script>
-
 </body>
 </html>
