--- a/gift.html
+++ b/gift.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Choose My Gift 😅</title>
+<title>Choose Your Gift</title>
 
 <style>
 body {
@@ -15,7 +15,6 @@ body {
   text-align: center;
 }
 
-/* Title */
 h1 {
   margin-top: 10px;
   font-size: 26px;
@@ -28,7 +27,7 @@ h1 {
   margin-bottom: 25px;
 }
 
-/* Cards Container */
+/* Grid */
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
@@ -37,17 +36,20 @@ h1 {
   margin: auto;
 }
 
-/* Card Style */
+/* Card Base */
 .card {
   background: linear-gradient(135deg, rgba(255,255,255,0.08), rgba(255,255,255,0.03));
   border-radius: 16px;
   padding: 30px 10px;
-  font-size: 32px;
   cursor: pointer;
   border: 1px solid rgba(255,255,255,0.1);
   box-shadow: 0 8px 20px rgba(0,0,0,0.45);
+  appearance: none;
   transition: transform .35s, background .35s;
   position: relative;
+
+  /* IMPORTANT FIX – content won't flip */
+  transform-style: preserve-3d;
 }
 
 .card:hover {
@@ -55,7 +57,12 @@ h1 {
   background: rgba(255,255,255,0.12);
 }
 
-/* Flip reveal animation */
+/* Fix backside text  */
+.card div {
+  backface-visibility: hidden;
+}
+
+/* Flip animation */
 .revealed {
   animation: flip .6s ease forwards;
 }
@@ -65,7 +72,6 @@ h1 {
   100% { transform: rotateY(180deg); }
 }
 
-/* Revealed Gift Text */
 .revealBox {
   margin-top: 35px;
   padding: 20px;
@@ -91,18 +97,16 @@ h1 {
 <body>
 
 <h1>Pick a Mystery Card 🎁</h1>
-<div class="sub">Click any card to reveal my gift</div>
+<div class="sub">Click any card to reveal my surprise</div>
 
-<!-- Gift Cards -->
 <div class="cards">
-  <div class="card" onclick="selectCard(0)">❓</div>
-  <div class="card" onclick="selectCard(1)">❓</div>
-  <div class="card" onclick="selectCard(2)">❓</div>
-  <div class="card" onclick="selectCard(3)">❓</div>
-  <div class="card" onclick="selectCard(4)">❓</div>
+  <div class="card" onclick="selectCard(0)"><div>❓</div></div>
+  <div class="card" onclick="selectCard(1)"><div>❓</div></div>
+  <div class="card" onclick="selectCard(2)"><div>❓</div></div>
+  <div class="card" onclick="selectCard(3)"><div>❓</div></div>
+  <div class="card" onclick="selectCard(4)"><div>❓</div></div>
 </div>
 
-<!-- Reveal Box -->
 <div class="revealBox" id="revealBox">
   <h2>Your Selected Gift</h2>
   <div id="chosenGift" style="font-size:18px; margin:12px 0;"></div>
@@ -112,45 +116,51 @@ h1 {
 </div>
 
 <script>
-const giftList = [
+const gifts = [
   "❌ You get nothing",
-  "🚗 You must go on a trip with me (you choose the place)",
-  "🎁 You will give me any gift — without asking",
-  "👕 Something that a boy can wear",
-  "❓ A mystery gift just for you"
+  "🚗 You must go on a casual date with me (your choice)",
+  "🎁 You owe me a surprise gift",
+  "👕 Something a boy can wear",
+  "❓ A secret gift just for me"
 ];
 
-let gameLocked = false;
+let locked = false;
 
-function selectCard(index) {
-  if (gameLocked) return;
-  gameLocked = true;
+function shuffleArray(arr) {
+  return arr
+    .map(value => ({ value, sort: Math.random() }))
+    .sort((a, b) => a.sort - b.sort)
+    .map(({ value }) => value);
+}
+
+function selectCard(selectedIndex) {
+  if (locked) return;
+  locked = true;
 
   const cards = document.querySelectorAll(".card");
 
-  // Shuffle gifts
-  const shuffled = [...giftList].sort(() => Math.random() - 0.5);
+  // FULL FIX – every card gets truly random gift
+  const shuffledGifts = shuffleArray(gifts);
 
-  // Selected gift
-  const chosen = shuffled[index];
-  document.getElementById("chosenGift").innerText = chosen;
+  // Selected card’s gift
+  document.getElementById("chosenGift").innerText = shuffledGifts[selectedIndex];
 
-  // Reveal all cards
-  cards.forEach((c, i) => {
-    c.classList.add("revealed");
+  // Reveal animation
+  cards.forEach((card, i) => {
+    card.classList.add("revealed");
+
     setTimeout(() => {
-      c.innerHTML = shuffled[i];
-      c.style.fontSize = "15px";
-      c.style.padding = "20px";
+      card.innerHTML = `<div style='font-size:15px; padding:20px;'>${shuffledGifts[i]}</div>`;
     }, 300);
   });
 
-  // Show reveal section
-  const listHTML = shuffled
+  // Show All gifts list
+  const list = shuffledGifts
     .map((g, i) => `<div class='giftItem'>Card ${i + 1}: ${g}</div>`)
     .join("");
 
-  document.getElementById("allGifts").innerHTML = listHTML;
+  document.getElementById("allGifts").innerHTML = list;
+
   document.getElementById("revealBox").style.display = "block";
 }
 </script>
