--- a/Rinky1.html
+++ b/Rinky1.html
@@ -91,7 +91,7 @@ section{
   font-size:13px;
   animation:float 6s ease-in-out infinite;
 }
-.p1{background:url("images/rinky1.jpg") center/cover;width:160px;height:160px;border-radius:26px;left:0;top:40px}
+.p1{background:url("d6b2c188-5b0a-4a93-bca6-efa8919650a1.jpeg") center/cover;width:160px;height:160px;border-radius:26px;left:0;top:40px}
 .p2{width:120px;height:120px;border-radius:50%;right:0;top:0;animation-delay:1s}
 .p3{width:140px;height:100px;border-radius:20px;right:20px;bottom:30px;animation-delay:2s}
 .p4{width:90px;height:90px;border-radius:50%;left:120px;bottom:0;animation-delay:3s}
