--- a/Rinky1.html
+++ b/Rinky1.html
@@ -92,10 +92,10 @@ section{
   animation:float 6s ease-in-out infinite;
 }
 .p1{background:url("d6b2c188-5b0a-4a93-bca6-efa8919650a1.jpeg") center/cover;width:160px;height:160px;border-radius:26px;left:0;top:40px}
-.p2{width:120px;height:120px;border-radius:50%;right:0;top:0;animation-delay:1s}
-.p3{width:140px;height:100px;border-radius:20px;right:20px;bottom:30px;animation-delay:2s}
-.p4{width:90px;height:90px;border-radius:50%;left:120px;bottom:0;animation-delay:3s}
-.p5{width:110px;height:110px;border-radius:22px;left:180px;top:90px;animation-delay:4s}
+.p2{background:url("d6b2c188-5b0a-4a93-bca6-efa8919650a1.jpeg") center/cover;width:120px;height:120px;border-radius:50%;right:0;top:0;animation-delay:1s}
+.p3{background:url("d6b2c188-5b0a-4a93-bca6-efa8919650a1.jpeg") center/cover;width:140px;height:100px;border-radius:20px;right:20px;bottom:30px;animation-delay:2s}
+.p4{background:url("d6b2c188-5b0a-4a93-bca6-efa8919650a1.jpeg") center/cover;width:90px;height:90px;border-radius:50%;left:120px;bottom:0;animation-delay:3s}
+.p5{background:url("d6b2c188-5b0a-4a93-bca6-efa8919650a1.jpeg") center/cover;width:110px;height:110px;border-radius:22px;left:180px;top:90px;animation-delay:4s}
 
 @keyframes float{
   50%{transform:translateY(-14px)}
@@ -171,11 +171,11 @@ footer{margin-top:30px;color:#9aa7b2;font-size:13px}
 <!-- ❤️ STORY 1 -->
 <section>
   <div class="collage-wrap">
-    <div class="photo p1">Photo 1</div>
-    <div class="photo p2">Photo 2</div>
-    <div class="photo p3">Photo 3</div>
-    <div class="photo p4">Photo 4</div>
-    <div class="photo p5">Photo 5</div>
+    <div class="photo p1"></div>
+    <div class="photo p2"></div>
+    <div class="photo p3"></div>
+    <div class="photo p4"></div>
+    <div class="photo p5"></div>
   </div>
 
   <h1>Happy Birthday Rinky 🎂💖</h1>
